# vector-poison-score-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vector_poison_score/: __init__.py  score.py
tests/: test_score.py
