[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vector-poison-score"
version = "0.1.0"
description = "Score (query, document) pairs for vector/RAG poisoning signals: vector-text mismatch, instruction-like payloads, NaN, suspiciously round numbers. Python port of @mukundakatta/vector-poison-score."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "rag",
  "vector",
  "embedding",
  "poisoning",
  "security",
  "guardrails",
  "llm",
  "ai",
  "agents",
  "retrieval",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
numpy = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/vector-poison-score-py"
Issues = "https://github.com/MukundaKatta/vector-poison-score-py/issues"
Source = "https://github.com/MukundaKatta/vector-poison-score-py"
"JS sibling" = "https://github.com/MukundaKatta/vector-poison-score"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_poison_score"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
